--- a/css/Contact.css
+++ b/css/Contact.css
@@ -5,7 +5,6 @@ section {
     width: 100%;
     height: auto;
     padding: 1rem;
-    margin-bottom: 1rem;
 }
 
 #contact_img img {
@@ -187,21 +186,6 @@ section {
     }
 }
 
-@media (max-width: 850px) {
-    section {
-        background-image: none;
-    }
-
-    #contact_form form {
-        width: 35rem;
-        margin: 0;
-    }
-
-    #contact_img img {
-        display: block;
-    }
-}
-
 #contact_map {
     display: flex;
     flex-direction: row;
@@ -212,7 +196,8 @@ section {
 
 .company-location {
     padding: 15px;
-    max-width: 600px;
+    margin: 1rem;
+    max-width: 100%;
     border: 1px solid #ccc;
     border-radius: 3px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -233,9 +218,29 @@ section {
         border: 1px solid #ddd;
         border-radius: 3px;
     }
+}
+
+@media (max-width: 850px) {
+    section {
+        background-image: none;
+    }
+
+    #contact_form form {
+        width: auto;
+        margin: 0;
+    }
+
+    #contact_img img {
+        display: block;
+    }
+
+    #contact_map {
+        flex-direction: column;
+        width: 100%;
+    }
 
     #Main_office_map,
     #Brand_office_map {
-        width: 35rem;
+        width: auto;
     }
 }
