--- a/css/Contact.css
+++ b/css/Contact.css
@@ -1,12 +1,3 @@
-section {
-    background-image: url(./img/contactus.webp);
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    height: auto;
-    padding: 1rem;
-}
-
 #contact_img img {
     width: 100%;
     height: auto;
@@ -17,6 +8,13 @@ section {
 }
 
 #contact_form {
+    background-image: url(./img/contactus.webp);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: auto;
+    padding: 1rem;
+
     form {
         width: 40vw;
         height: auto;
@@ -186,12 +184,46 @@ section {
     }
 }
 
+#after_send_contact {
+    background-image: url(./img/contactus.webp);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 500px;
+    padding: 1rem;
+    display: none;
+
+    div {
+        max-width: 35rem;
+        height: auto;
+        padding: 1rem;
+        gap: 0.5rem;
+        background-color: rgba(255, 255, 255, 0.85);
+        border-radius: 5px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+
+        h1,
+        h3 {
+            font-family: 'Lora', serif;
+            font-size: 2.5rem;
+            font-weight: 600;
+            font-style: italic;
+            text-align: center;
+            color: #333;
+        }
+
+        h3 {
+            font-size: 1.2rem;
+        }
+    }
+}
+
 #contact_map {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
-    gap: 1rem;
+    gap: 0.5rem;
 }
 
 .company-location {
@@ -213,7 +245,7 @@ section {
     }
 
     .map {
-        width: 35rem;
+        width: 32rem;
         height: 400px;
         border: 1px solid #ddd;
         border-radius: 3px;
