--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,9 @@
 }
 
 #loading-spinner {
+	width: 100%;
+	height: 200px;
+	text-align: center;
 	position: fixed;
 	top: 50%;
 	left: 50%;
@@ -127,7 +130,6 @@
 			will-change: transform;
 
 			.product-item {
-				flex: 0 0 calc((100% / 4) - 1rem);
 				text-align: center;
 				box-sizing: border-box;
 				padding: 15px;
